1/25 Init Commit
1/27 Prints Empty Room
1/28 Creating Multiple Rooms
     Clean up Print Statements
     Adding Corridors
     Do corridors correctly
     Clean up code
1/29 Adding Stairs
1/30 Refactor to add constants and global vars
     Adjusting room size
1/31 Add README and Changelog
2/2 Update to use structs
    Clean up
2/3 Init commit for Assignment2
    Read info from dungeon file
    Load all data
    Drawing dungeon
    Removing old code
2/4 Add corridors when loading
2/6 16 bit stair and room nums
    Cleaning up load functions
    Load dungeons to disk
2/8 Adding toggle switch functionality
2/9 Change rooms to structs
    Changing stairs to structs
    Using malloc
    Adding validation on marker
    Updaing CHANGELOG and README
2/11 Init Commit for Assignment3
	 Heap Code
2/13 Add shared-components
	 Separating files
2/16 More Understandable heap
2/17 Distance maps for non tunneling monsters
	 Tunneling through walls
	 Restructuring Code
	 Making Header files
2/18 Updating Changelog and README
	 Init commit for Assignment 4
	 Fixing bug with divide by 0
2/20 Bug Fixes
	 switch for num monsters
	 Makefile improvements
2/23 Struct for characters
	 Add character map
	 Make pathfinding work with new characters
	 Add folders
	 Make player queue
	 Improve character node
	 Moving using queue
	 Telepathic Movement
2/24 End Game
	 Go Towards PC if visible
	 Smart Telepathic Monsters
	 Refactor distances to take a position
	 Remember last known position
2/25 Determine win/lose
	 Save playerCharacter instead of just position
	 Code formatting
	 Updating Changelog and README